# masterdh

./: .gitignore  README.md  corpus-explore.ipynb  corpus-indexing.ipynb  naive-bayes-example.ipynb  text-retrieval.ipynb  twitter-acquisition.ipynb
2024-25/: L1.0-vector-space.ipynb  L2.0-tokenizers.ipynb  L3.0-neural-networks.ipynb  README.md
2024-25/data/: weather_dataset.json
2024-25/mdh/: utils.py  weather.py
classification/: word2vec.ipynb
materials/: word2vec.model
materials/classification/: linear-classifiers.ipynb  word2vec.ipynb
materials/ricette/: evaluation.md  tfidf.ipynb
materials/twitter/: classification.ipynb
materials/twitter/data/: twitter-news.json
materials/vatican/: classification.ipynb  introduction-neural-networks.ipynb  lexicon.ipynb  playground.ipynb
materials/vatican/vatican/: playground.py  pyproject.toml
materials/vatican/vatican/vatican/: indexing.py
materials/wikibio/: clustering.ipynb  kmeans.ipynb  vector-space-model.ipynb
ricette/: classification.ipynb  clustering.ipynb  vector-space-model.ipynb  w2v.ipynb  word2vec.py
twitter/: corpus-explore.ipynb  corpus-indexing.ipynb
vatican/: data.ipynb  language-models.ipynb  lexicon.ipynb  playground.ipynb  word2vec.ipynb
vatican/vatican/: run_indexing.py
vatican/vatican/vatican/: data.py  database.py
vatican/vatican/vatican/showcases/: classification.py
wikibio/: vector-space-model.ipynb
